<resources>
    <string name="app_name">Multi-Game</string>
    <string name="author">Par Gabriel LEY</string>
    <string name="welcome">Bienvenue !</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="age">Age</string>
    <string name="localisation">Localisation</string>
    <string name="players">Joueurs</string>
    <string name="validate">Valider</string>
    <string name="player_list">Liste des joueurs</string>

    <string name="begin">Commencer</string>
    <string name="fast_tap">Fast Tap</string>
    <string name="swipe">Swipe</string>
    <string name="dragndrop">Drag\'n\'drop</string>
    <string name="prepare">Préparez vous…</string>
    <string name="score">Score : </string>
    <string name="your_score">Votre score est de</string>
    <string name="menu">Menu</string>

    <string name="ipac_game">Ipac Game</string>
    <string name="number_try">Il vous reste %d essais</string>
    <string name="enter_number">Entrez un nombre</string>
    <string name="error_empty_input">Veuillez entrer un nombre</string>
    <string name="more">Plus</string>
    <string name="less">Moins</string>
    <string name="leave">Quitter</string>
    <string name="settings">Paramètres</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="change_player">Changer de joueur</string>
    <string name="profil">Profil</string>
    <string name="modify_player">Modifier le joueur</string>
    <string name="delete_player">Supprimer le joueur</string>
</resources>
