<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".PlayerDetail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:textSize="40sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_detail_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/avatar_placeholder"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            >
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
            />
            <TextView
                android:id="@+id/player_detail_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/player_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/player_detail_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/player_detail_localisation"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <Space
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/player_detail_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_player"/>

    <Button
        android:id="@+id/player_detail_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_player"
        android:layout_marginBottom="30dp"/>

</LinearLayout>